# SimpleITKPythonPackage

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: main.yml
scripts/: dockcross-manylinux-build-wheels.sh  manylinux-build-wheels.sh
scripts/internal/: manylinux-build-wheels.sh
